add deleting, adding, searching contact. add styles

--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,14 +1,20 @@
 .list {
+  display: flex;
+  gap: 12px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .item {
-  border: 3px solid black;
-  width: 400px;
+  border: 2px solid black;
+  border-radius: 4px;
+  min-width: 300px;
   display: flex;
-  gap: 24px;
-  justify-content: space-around;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px;
 }
 
-.item:not(:last-child) {
-  margin-bottom: 10px;
+.emptyList {
+  color: lightgrey;
 }
