--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,13 +1,22 @@
 .form {
-  display: flex;
-  flex-direction: column;
   width: 300px;
   border: 1px solid black;
   padding: 25px;
   border-radius: 4px;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
 }
 
-.field {
+.wrap {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 16px;
+}
+
+.wrap label {
+  text-align: start;
+}
+
+.errorText {
+  color: red;
+  text-transform: uppercase;
 }
